# zetsy

./: .drone.yml  .gitattributes  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: general-issue.md
django_templates/: index.html
server/: core.py  settings.py  urls.py
server/api/: __init__.py  urls.py
server/api/views/: __init__.py  upload.py
server/core/: __init__.py  config.py  urls.py
server/models/: __init__.py  index.py  stored_file.py  uploader.py
server/views/: __init__.py
static/: general.css
